Fixes the alignment of the projects

--- a/CameronReynoldsPortfolio/assets/css/styles.css
+++ b/CameronReynoldsPortfolio/assets/css/styles.css
@@ -178,8 +178,9 @@ a:hover {
 }
 
 .project-pic {
-  width: 65%;
-  height: 60%;
+  max-width: 100%;
+  height: auto;
+  padding-bottom: 20px;
 }
 
 .projects-container {
@@ -217,6 +218,12 @@ a:hover {
   box-shadow: 0 3px 10px var(--primary-shadow);
   padding: 20px;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  align-self: stretch;
 }
 
 .contact {
